--- a/requirements.txt
+++ b/requirements.txt
@@ -13,3 +13,7 @@ numpy==1.24.3
 # 유틸리티
 tqdm==4.65.0           # 진행률 표시
 python-dotenv==1.0.0   # 환경 변수 관리
+
+# ML 관련 라이브러리
+huggingface_hub==0.12.0
+sentence-transformers==2.2.2
