--- a/requirements.txt
+++ b/requirements.txt
@@ -16,3 +16,5 @@ regex==2024.4.16               # 정규식 확장 기능
 huggingface_hub==0.30.2        # 모델, 데이터셋, 파일 다운로드 및 관리
 sentence-transformers==4.1.0   # 문장, 문단, 이미지 등 다양한 입력을 임베딩(고차원 벡터)으로 변환
 torch==2.6.0                   # 딥러닝 모델 실행, GPU 가속 지원, 텐서 연산, 자동 미분, 유연한 구조
+transformers==4.51.3           # 모델훈련에 사용?
+accelerate>=0.26.0             # Trainer 사용에 필요
