--- a/requirements.txt
+++ b/requirements.txt
@@ -13,8 +13,15 @@ colorama==0.4.6                # 터미널 컬러 출력
 regex==2024.4.16               # 정규식 확장 기능
 
 # ML 관련 라이브러리
-huggingface_hub==0.30.2        # 모델, 데이터셋, 파일 다운로드 및 관리
+huggingface_hub==0.30.2        # Hugging Face Hub에서 사전훈련된 모델 다운로드 및 관리
 sentence-transformers==4.1.0   # 문장, 문단, 이미지 등 다양한 입력을 임베딩(고차원 벡터)으로 변환
 torch==2.6.0                   # 딥러닝 모델 실행, GPU 가속 지원, 텐서 연산, 자동 미분, 유연한 구조
-transformers==4.51.3           # 모델훈련에 사용?
-accelerate>=0.26.0             # Trainer 사용에 필요
+transformers==4.51.3           # Cross-Encoder 모델 파인튜닝 및 추론에 사용 (AutoModel, Trainer 등 제공)
+accelerate>=0.26.0             # 모델 훈련 최적화 및 가속화 (Trainer API에서 내부적으로 사용)
+
+# FastAPI 백엔드
+fastapi==0.110.0               # 고성능 웹 API 프레임워크
+uvicorn==0.27.1                # ASGI 서버 (FastAPI 애플리케이션 실행)
+pydantic==2.6.4                # 데이터 검증 및 설정 관리
+python-multipart==0.0.9        # 멀티파트 요청 처리 (파일 업로드 등)
+httpx==0.26.0                  # 비동기 HTTP 클라이언트 (API 통신 및 테스트)
